--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
+.dogsContainer {
+  height: 100vh;
+  padding: 200px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  place-self: center;
+}
+
+.dogCard {
   text-align: center;
+  border-radius: 50px;
+  background: #ffffff;
+  box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px #ffffff;
+  width: 300px;
+  margin: 0 auto;
+  height: 250px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dogCard img {
+  width: 100px;
+  height: 100px;
+  margin-top: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: -100px;
+  font-size: 40px;
 }
